src/index.css
* {
  box-sizing: border-box;
}

#root {
  height: auto !important;
  overflow: visible !important;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 70px;
  overflow-x: hidden;
  overflow-y: auto;
  height: 100%;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
  overflow-y: auto;
  height: auto;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

